[gd_scene load_steps=22 format=3 uid="uid://dkvybfll2yadk"]

[ext_resource type="Texture2D" uid="uid://332jnlu45du2" path="res://Assets/imp/imp_idle_anim_f0.png" id="1_6gfby"]
[ext_resource type="Script" path="res://Mob/Mob.gd" id="1_k5fcp"]
[ext_resource type="Texture2D" uid="uid://cytyv67fc07ia" path="res://Assets/imp/imp_idle_anim_f1.png" id="2_krdyo"]
[ext_resource type="Shader" path="res://Mob/Mob.gdshader" id="2_qaafc"]
[ext_resource type="Texture2D" uid="uid://dt42lrq0pgo4b" path="res://Assets/imp/imp_idle_anim_f2.png" id="3_d1x7p"]
[ext_resource type="Texture2D" uid="uid://d1jl4cnq72uj7" path="res://Assets/imp/imp_idle_anim_f3.png" id="4_l4rye"]
[ext_resource type="Texture2D" uid="uid://bpbmaebetuyng" path="res://Assets/imp/imp_run_anim_f0.png" id="5_psvj7"]
[ext_resource type="Texture2D" uid="uid://2xamnysq4vto" path="res://Assets/imp/imp_run_anim_f1.png" id="6_ske58"]
[ext_resource type="Texture2D" uid="uid://ex05svwlacuy" path="res://Assets/imp/imp_run_anim_f2.png" id="7_8mcb0"]
[ext_resource type="Texture2D" uid="uid://qrppbst682rg" path="res://Assets/imp/imp_run_anim_f3.png" id="8_g0vcx"]
[ext_resource type="Script" path="res://Mob/WanderController.gd" id="10_ejgsy"]
[ext_resource type="PackedScene" uid="uid://c7imeivbq2c18" path="res://Box/Hurtbox.tscn" id="11_tw7q2"]
[ext_resource type="PackedScene" uid="uid://dioyom8ah26br" path="res://Stats/Stats.tscn" id="12_4n3k2"]
[ext_resource type="PackedScene" uid="uid://c30k35ly7ca0q" path="res://Box/PlayerDetectionZone.tscn" id="14_nfag6"]
[ext_resource type="PackedScene" uid="uid://ccaerkmr66g5j" path="res://Mob/MobWeapon.tscn" id="15_bucr8"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qoa6x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ae8i"]
shader = ExtResource("2_qaafc")
shader_parameter/value = 0.347
shader_parameter/noise_texture = SubResource("NoiseTexture2D_qoa6x")

[sub_resource type="SpriteFrames" id="SpriteFrames_n13er"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6gfby")
}, {
"duration": 1.0,
"texture": ExtResource("2_krdyo")
}, {
"duration": 1.0,
"texture": ExtResource("3_d1x7p")
}, {
"duration": 1.0,
"texture": ExtResource("4_l4rye")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_psvj7")
}, {
"duration": 1.0,
"texture": ExtResource("6_ske58")
}, {
"duration": 1.0,
"texture": ExtResource("7_8mcb0")
}, {
"duration": 1.0,
"texture": ExtResource("8_g0vcx")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6i52e"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2756p"]
noise = SubResource("FastNoiseLite_6i52e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x2b4a"]
shader = ExtResource("2_qaafc")
shader_parameter/value = 1.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_2756p")

[node name="Mob" type="CharacterBody2D"]
script = ExtResource("1_k5fcp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8ae8i")
sprite_frames = SubResource("SpriteFrames_n13er")
animation = &"run"
autoplay = "run"

[node name="WanderController" type="Node2D" parent="."]
script = ExtResource("10_ejgsy")

[node name="Timer" type="Timer" parent="WanderController"]

[node name="Stats" parent="." instance=ExtResource("12_4n3k2")]
max_health = 3

[node name="Hurtbox" parent="." instance=ExtResource("11_tw7q2")]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_x2b4a")
texture = ExtResource("1_6gfby")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("14_nfag6")]

[node name="MobWeapon" parent="." instance=ExtResource("15_bucr8")]

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
